--- a/TD3_L17.ipynb
+++ b/TD3_L17.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TD3_L17.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPz9/tkYgkQyhEjbXxVS9dt",
+      "authorship_tag": "ABX9TyNi1LATThMsmlNeVJ/yK4DU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,19 +33,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 104
         },
-        "outputId": "62474cba-a71f-4acd-81af-3051f85835b0"
+        "outputId": "0f2129d4-4c16-4be2-bfd9-35ecf2d398e6"
       },
       "source": [
         "!pip install pybullet"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting pybullet\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ba/77/abc4d5af8e46e2b5523d5c504ffd9086520bf657286a5ac623daf5d98e03/pybullet-2.8.3-cp36-cp36m-manylinux1_x86_64.whl (95.3MB)\n",
-            "\u001b[K     |████████████████████████████████| 95.3MB 100kB/s \n",
+            "\u001b[K     |████████████████████████████████| 95.3MB 94kB/s \n",
             "\u001b[?25hInstalling collected packages: pybullet\n",
             "Successfully installed pybullet-2.8.3\n"
           ],
@@ -75,7 +75,7 @@
         "from torch.autograd import Variable\n",
         "from collections import deque"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         "      batch_dones.append(np.array(done, copy=False))\n",
         "    return np.array(batch_states), np.array(batch_next_states), np.array(batch_actions), np.array(batch_rewards).reshape(-1, 1), np.array(batch_dones).reshape(-1, 1)"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -123,7 +123,100 @@
       },
       "source": [
         "class Actor(nn.Module):\n",
-        "  "
+        "  def __init__(self, state_dim, action_dim, max_action):\n",
+        "    super(Actor, self).__init__()\n",
+        "    self.layer_1 = nn.Linear(state_dim, 400)\n",
+        "    self.layer_2 = nn.Linear(400, 300)\n",
+        "    self.layer_3 = nn.Linear(300, action_dim)\n",
+        "    self.max_action = max_action\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    x = F.relu(self.layer_1(x))\n",
+        "    x = F.relu(self.layer_2(x))\n",
+        "    x = self.max_action * torch.tanh(self.layer_3(x))\n",
+        "    return x"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2pJeClJuweUq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Critic(nn.Module):\n",
+        "  def __init__(self, state_dim, action_dim):\n",
+        "    super(Critic, self).__init__()\n",
+        "    self.layer_1 = nn.Linear(state_dim + action_dim, 400)\n",
+        "    self.layer_2 = nn.Linear(400, 300)\n",
+        "    self.layer_3 = nn.Linear(300, 1)\n",
+        "    # second critic NN:\n",
+        "    self.layer_4 = nn.Linear(state_dim + action_dim, 400)\n",
+        "    self.layer_5 = nn.Linear(400, 300)\n",
+        "    self.layer_6 = nn.Linear(300, 1)\n",
+        "\n",
+        "  def forward(self, x, u):\n",
+        "    xu = torch.cat([x, u], 1)\n",
+        "    x1 = F.relu(self.layer_1(xu))\n",
+        "    x1 = F.relu(self.layer_2(x1))\n",
+        "    x1 = self.layer_3(x1)\n",
+        "    # second critic NN:\n",
+        "    x2 = F.relu(self.layer_4(xu))\n",
+        "    x2 = F.relu(self.layer_5(x2))\n",
+        "    x2 = self.layer_6(x2)\n",
+        "    return x1, x2\n",
+        "  \n",
+        "  def Q1(self, x, u):\n",
+        "    xu = torch.cat([x, u], 1)\n",
+        "    x1 = F.relu(self.layer_1(xu))\n",
+        "    x1 = F.relu(self.layer_2(x1))\n",
+        "    x1 = self.layer_3(x1)\n",
+        "    return x1"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XT_uhhomzrin",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "\n",
+        "class TD3(object):\n",
+        "  def __init__(self, state_dim, action_dim, max_action):\n",
+        "    self.actor = Actor(state_dim, action_dim, max_action).to(device)\n",
+        "    self.actor_target = Actor(state_dim, action_dim, max_action).to(device)\n",
+        "    self.actor_target.load_state_dict(self.actor.state_dict())\n",
+        "    self.actor_optimizer = torch.optim.Adam(self.actor.parameters())\n",
+        "\n",
+        "    self.critic = Critic(state_dim, action_dim).to(device)\n",
+        "    self.critic_target = Critic(state_dim, action_dim).to(device)\n",
+        "    self.critic_target.load_state_dict(self.critic.state_dict())\n",
+        "    self.critic_optimizer = torch.optim.Adam(self.critic.parameters())\n",
+        "\n",
+        "    self.max_action = max_action\n",
+        "\n",
+        "  def select_action(self, state):\n",
+        "    state = torch.Tensor(state.reshape(1, -1)).to(device)\n",
+        "    return self.actor(state).cpu().data.numpy().flatten()\n",
+        "\n",
+        "  def train(self, replay_buffer, iterations, batch_size=100, discount=0.99, tau=0.005, policy_noise=0.2, noise_clip=0.5, policy_freq=2):\n",
+        "    for it in range(iterations):\n",
+        "      batch_states, batch_next_states, batch_actions, batch_rewards, batch_dones = replay_buffer.sample(batch_size)\n",
+        "      state = torch.Tensor(batch_states).to(device)\n",
+        "      next_state = torch.Tensor(batch_next_states).to(device)\n",
+        "      action = torch.Tensor(batch_actions).to(device)\n",
+        "      reward = torch.Tensor(batch_rewards).to(device)\n",
+        "      done = torch.Tensor(batch_dones).to(device)\n",
+        "\n",
+        "      next_action = self.actor_target(next_state)"
       ],
       "execution_count": null,
       "outputs": []
