--- a/TD3_L17.ipynb
+++ b/TD3_L17.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TD3_L17.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNi1LATThMsmlNeVJ/yK4DU",
+      "authorship_tag": "ABX9TyMebl3CNY2z54BPqdoW/y01",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,19 +33,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 104
         },
-        "outputId": "0f2129d4-4c16-4be2-bfd9-35ecf2d398e6"
+        "outputId": "20df983b-d932-482e-cc5a-e1d8c007f42b"
       },
       "source": [
         "!pip install pybullet"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting pybullet\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ba/77/abc4d5af8e46e2b5523d5c504ffd9086520bf657286a5ac623daf5d98e03/pybullet-2.8.3-cp36-cp36m-manylinux1_x86_64.whl (95.3MB)\n",
-            "\u001b[K     |████████████████████████████████| 95.3MB 94kB/s \n",
+            "\u001b[K     |████████████████████████████████| 95.3MB 55kB/s \n",
             "\u001b[?25hInstalling collected packages: pybullet\n",
             "Successfully installed pybullet-2.8.3\n"
           ],
@@ -75,7 +75,7 @@
         "from torch.autograd import Variable\n",
         "from collections import deque"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         "      batch_dones.append(np.array(done, copy=False))\n",
         "    return np.array(batch_states), np.array(batch_next_states), np.array(batch_actions), np.array(batch_rewards).reshape(-1, 1), np.array(batch_dones).reshape(-1, 1)"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
         "    x = self.max_action * torch.tanh(self.layer_3(x))\n",
         "    return x"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
         "    x1 = self.layer_3(x1)\n",
         "    return x1"
       ],
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -216,7 +216,345 @@
         "      reward = torch.Tensor(batch_rewards).to(device)\n",
         "      done = torch.Tensor(batch_dones).to(device)\n",
         "\n",
-        "      next_action = self.actor_target(next_state)"
+        "      next_action = self.actor_target(next_state)\n",
+        "\n",
+        "      noise = torch.Tensor(batch_actions).data.normal_(0, policy_noise).to(device)\n",
+        "      noise = noise.clamp(-noise_clip, noise_clip)\n",
+        "      next_action = (next_action + noise).clamp(-self.max_action, self.max_action)\n",
+        "\n",
+        "      target_Q1, target_Q2 = self.critic_target(next_state, next_action)\n",
+        "      target_Q = torch.min(targetQ1, targetQ2)\n",
+        "      target_Q = reward + ((1 - done) * (discount * target_Q)).detach()\n",
+        "\n",
+        "      current_Q1, current_Q2 = self.critic(state, action)\n",
+        "      critic_loss = F.mse_loss(current_Q1, target_Q) + F.mse_loss(current_Q2, target_Q)\n",
+        "\n",
+        "      self.critic_optimizer.zero_grad()\n",
+        "      critic_loss.backward()\n",
+        "      self.critic_optimizer.step()\n",
+        "\n",
+        "      if it % freq == 0:\n",
+        "        actor_loss = -self.critic.Q1(state, self.actor(state)).mean()\n",
+        "        self.actor_optimizer.zero_grad()\n",
+        "        actor_loss.backward()\n",
+        "        self.actor_optimizer.step()\n",
+        "        \n",
+        "        for param, target_param in zip(self.actor.parameters(), self.actor_target.parameters()):\n",
+        "          target_param.data.copy_(tau * param.data + (1 - tau) * target_param.data)\n",
+        "\n",
+        "        for param, target_param in zip(self.critic.parameters(), self.critic_target.parameters()):\n",
+        "          target_param.data.copy_(tau * param.data + (1 - tau) * target_param.data)          \n",
+        "\n",
+        "    def save(self, filename, directory):\n",
+        "      torch.save(self.actor.state_dict(), '%s/%s_actor.pth' % (directory, filename))\n",
+        "      torch.save(self.critic.state_dict(), '%s/%s_critic.pth' % (directory, filename))\n",
+        "    def load(self, filename, directory):\n",
+        "      self.actor.load_state_dict(torch.load('%s/%s_actor.pth' % (directory, filename)))\n",
+        "      self.critic.load_state_dict(torch.load('%s/%s_critic.pth' % (directory, filename)))"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sTkNDI6341a0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def evaluate_policy(policy, eval_episodes=10):\n",
+        "  avg_reward = 0\n",
+        "  for _ in range(eval_episodes):\n",
+        "    obs = env.reset()\n",
+        "    done = False\n",
+        "    while not done:\n",
+        "      action = policy.select_action(np.array(obs))\n",
+        "      obs, reward, done, _ = env.step(action)\n",
+        "      avg_reward += reward\n",
+        "    avg_reward /= eval_episodes\n",
+        "    print('----------------------------------------')\n",
+        "    print('Average reward over the evaluation step: %f' % (avg_reward))\n",
+        "    print('----------------------------------------')\n",
+        "    return avg_reward"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CpPgnQu56uTt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "env_name = 'HalfCheetahBulletEnv-v0'\n",
+        "seed = 0\n",
+        "start_timesteps = 1e4\n",
+        "eval_freq = 5e3\n",
+        "max_timesteps = 5e5\n",
+        "save_models = True\n",
+        "expl_noise = 0.1\n",
+        "batch_size = 100\n",
+        "discount = 0.99\n",
+        "tau = 0.005\n",
+        "policy_noise = 0.2\n",
+        "noise_clip = 0.5\n",
+        "policy_freq = 2"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cGxoaj6z71VO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "9db20501-ba9b-407c-b91b-9b026358b5b6"
+      },
+      "source": [
+        "file_name = \"%s_%s_%s\" % ('TD3', env_name, str(seed))\n",
+        "print('---------------------------')\n",
+        "print('Settings: %s' % (file_name))\n",
+        "print('---------------------------')"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "---------------------------\n",
+            "Settings: TD3_HalfCheetahBulletEnv-v0_0\n",
+            "---------------------------\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZbKKMtXc8gn8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "if not os.path.exists('./results'):\n",
+        "  os.makedirs('./results')\n",
+        "if save_models and not os.path.exists('./pytorch_models'):\n",
+        "  os.makedirs('./pytorch_models')"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RzrlLdwQ86Wh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "0433feb9-7e37-4cd4-bae7-fe049c15376c"
+      },
+      "source": [
+        "env = gym.make(env_name)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/gym/logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+            "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fID2oUDD9ApB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "env.seed(seed)\n",
+        "torch.manual_seed(seed)\n",
+        "np.random.seed(seed)\n",
+        "state_dim = env.observation_space.shape[0]\n",
+        "action_dim = env.action_space.shape[0]\n",
+        "max_action = float(env.action_space.high[0])"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VwklU2FI9xSc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "policy = TD3(state_dim, action_dim, max_action)"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6qXvs9k_-Ori",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "replay_buffer = ReplayBuffer()"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u4W_kJ-w-T1A",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "151a8856-c358-4290-a44c-b36e798e7c92"
+      },
+      "source": [
+        "evaluations = [evaluate_policy(policy)]"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "----------------------------------------\n",
+            "Average reward over the evaluation step: -143.135146\n",
+            "----------------------------------------\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6IEq3JXi-ZUZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def mkdir(base, name):\n",
+        "  path = os.path.join(base, name)\n",
+        "  if not os.path.exists(path):\n",
+        "    os.makedirs(path)\n",
+        "  return path\n",
+        "\n",
+        "work_dir = mkdir('exp','brs')\n",
+        "monitor_dir = mkdir(work_dir, 'monitor')\n",
+        "max_episode_steps = env._max_episode_steps\n",
+        "save_env_vid = False\n",
+        "if save_env_vid:\n",
+        "  env = wrappers.Monitor(env, monitor_dir, force=True)\n",
+        "  env.reset()"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VY8Qqza4_MSH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "total_timesteps = 0\n",
+        "timesteps_since_eval = 0\n",
+        "episode_num = 0\n",
+        "done = True\n",
+        "t0 = time.time()"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZSUZdrcH-LEb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "while total_timesteps < max_timesteps:\n",
+        "  if done:\n",
+        "    if total_timesteps != 0:\n",
+        "      print('Total timesteps: {} Episode num: {} Reward: {}'.format(total_timesteps, episode_num, episode_reward))\n",
+        "      policy.train(replay_buffer, episode_timesteps, batch_size, discount, tau, policy_noise, noise_clip, policy_freq)\n",
+        "\n",
+        "    if timesteps_since_eval >= eval_freq:\n",
+        "      timesteps_since_eval %= eval_freq\n",
+        "      evaluations.append(evaluate_policy(policy))\n",
+        "      policy.save(file_name, directory='./pytorch_models')\n",
+        "      np.save('./results/%s' % (file_name), evaluations)\n",
+        "    \n",
+        "    obs = env.reset()\n",
+        "    done = False\n",
+        "\n",
+        "    episode_reward = 0\n",
+        "    episode_timesteps = 0\n",
+        "    episode_num += 1\n",
+        "\n",
+        "    if total_timesteps < start_timesteps:\n",
+        "      action = env.action_space.sample()\n",
+        "    else:\n",
+        "      action = policy.select_action(np.array(obs))\n",
+        "      if expl_noise != 0:\n",
+        "        action = (action + np.random.normal(0, expl_noise, size=env.action_space.shape[0])).clip(env.action_space.low, env.action_space.high)\n",
+        "\n",
+        "    new_obs, reward, done, _ = env.step(action)\n",
+        "\n",
+        "    done_bool = 0 if episode_timesteps + 1 == env._max_episode_steps else float(done)\n",
+        "\n",
+        "    episode_reward += reward\n",
+        "\n",
+        "    replay_buffer.add((obs, new_obs, action, reward, done_bool))\n",
+        "\n",
+        "    obs = new_obs\n",
+        "    episode_timesteps += 1\n",
+        "    total_timesteps += 1\n",
+        "    timesteps_since_eval += 1\n",
+        "\n",
+        "evaluations.append(evaluate_policy(policy))\n",
+        "if save_models: policy.save('%s' % (file_name), directory='./pytorch_models')\n",
+        "np.save('./results/%s' % (file_name), evaluations)\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uT1VE9wzGEAL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
