Added code to initialize q table

--- a/RL_QLEARN.ipynb
+++ b/RL_QLEARN.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a8ac580",
+   "id": "87bb9c15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "80d4431e",
+   "id": "e4a2d132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "41a2144d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "62255bba",
+   "id": "dc1039e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,36 +52,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f8d5ed9a",
+   "execution_count": 8,
+   "id": "174b6042",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import clear_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "044b8076",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\u001b[41mS\u001b[0mFFF\n",
-      "FHFH\n",
-      "FFFH\n",
-      "HFFG\n",
-      "  (Up)\n",
-      "\u001b[41mS\u001b[0mFFF\n",
-      "FHFH\n",
-      "FFFH\n",
-      "HFFG\n",
-      "  (Left)\n",
-      "\u001b[41mS\u001b[0mFFF\n",
-      "FHFH\n",
-      "FFFH\n",
-      "HFFG\n",
       "  (Right)\n",
-      "S\u001b[41mF\u001b[0mFF\n",
-      "FHFH\n",
-      "FFFH\n",
-      "HFFG\n",
-      "  (Up)\n",
-      "S\u001b[41mF\u001b[0mFF\n",
+      "SF\u001b[41mF\u001b[0mF\n",
       "FHFH\n",
       "FFFH\n",
       "HFFG\n"
@@ -82,21 +82,88 @@
     "env = gym.make(\"FrozenLakeNoSlippery-v0\")\n",
     "env.reset()\n",
     "\n",
-    "for step in range(5):\n",
+    "for step in range(15):\n",
     "    env.render()\n",
     "    action = env.action_space.sample()\n",
-    "    env.step(action)\n",
-    "\n",
+    "    obs, reward, done, info = env.step(action)\n",
+    "    sleep(0.5)\n",
+    "    clear_output(wait=True)\n",
+    "    if done:\n",
+    "        env.reset()\n",
     "env.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "71eff6fc",
+   "execution_count": 12,
+   "id": "60a8082c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "action_size = env.action_space.n\n",
+    "state_size = env.observation_space.n\n",
+    "\n",
+    "q_table = np.zeros([state_size, action_size])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "76e964c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4c1024c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EPOCHS = 20000 # how many times the agent plays the game in its entirety\n",
+    "ALPHA = 0.8 # learning rate\n",
+    "GAMMA = 0.95 # discount rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "332f15b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epsilon = 1.0\n",
+    "max_epsilon = 1.0\n"
+   ]
   }
  ],
  "metadata": {
